--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+    @apply bg-white text-gray-900 transition-colors duration-300;
+  }
+  
+  html.dark {
+    @apply bg-gray-900 text-gray-100;
+  }
